Closed Bug 1883279 Opened 7 months ago Closed 6 months ago

Check browser.navigation.requireUserInteraction before skipping entries based on user interaction

Categories

(Core :: DOM: Navigation, defect)

defect

Tracking

()

RESOLVED FIXED
125 Branch
Tracking Status
firefox125 --- fixed

People

(Reporter: peterv, Assigned: peterv)

References

(Blocks 1 open bug, Regressed 1 open bug)

Details

Attachments

(1 file)

No description provided.
Blocks: 1677190

We don't want to start skipping entries just because callers passed in
aRequireUserInteraction, since the feature is not ready and the flag in the
entries might not be correct.

Duplicate of this bug: 1883211
Pushed by pvanderbeken@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ae0da9180abd Check browser.navigation.requireUserInteraction before skipping entries based on user interaction. r=farre
Status: ASSIGNED → RESOLVED
Closed: 6 months ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
Regressions: 1889135
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: