Bug 1883279 - Check browser.navigation.requireUserInteraction before skipping entries based on user interaction. r=farre

We don't want to start skipping entries just because callers passed in
aRequireUserInteraction, since the feature is not ready and the flag in the
entries might not be correct.

Differential Revision: https://phabricator.services.mozilla.com/D203376