docshell/base/CanonicalBrowsingContext.cpp
@@ -1220,7 +1220,8 @@ Maybe<int32_t> CanonicalBrowsingContext::HistoryGo(
     // Check for user interaction if desired, except for the first and last
     // history entries. We compare with >= to account for the case where
     // aOffset >= length.
-    if (!aRequireUserInteraction || index.value() >= shistory->Length() - 1 ||
+    if (!StaticPrefs::browser_navigation_requireUserInteraction() ||
+        !aRequireUserInteraction || index.value() >= shistory->Length() - 1 ||
         index.value() <= 0) {
       break;
     }
